Fix drawer alignment (#229)
* add scrolling to drawer

* fix alignment issue in drawer

* revert scrolling for drawer, wrong class modified

* use grid instead of float

* based on PR review, made the following changes: rename class, remove width

--- a/src/ensembl/src/content/app/browser/drawer/Drawer.scss
+++ b/src/ensembl/src/content/app/browser/drawer/Drawer.scss
@@ -2,10 +2,12 @@
 
 .drawer {
   height: 100%;
+  overflow: auto;
 }
 
 .drawerView {
   overflow-y: auto;
+  margin-top: 10px;
 
   h2 {
     display: flex;
@@ -14,29 +16,33 @@
     text-align: center;
   }
 
-  dd {
-    width: 600px;
+  p {
+    margin: 0px;
   }
 
-  label {
-    float: left;
+  .nextLine {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+  }
+
+  .label {
     font-weight: $light;
     text-align: right;
-    width: 150px;
-  }
-
-  p {
-    margin: 0 0 20px 0;
   }
 
   .details {
-    float: right;
+    display: flex;
     text-align: left;
-    width: 400px;
   }
 
   .mainDetail {
-    font-size: 16px;
     font-weight: $bold;
   }
 
